test/scc_test/stmt/semantic-errors/039.t
void test()
{
    if (1) break;
}